[package]
name = "addr-symbolizer"
version = "0.2.0"
categories = ["parser-implementations"]
description = "A KISS Rust crate to symbolize function addresses using Windows PDB files."
include = ["/Cargo.toml", "/LICENSE", "/src/**", "/examples/**", "/tests/**", "README.md"]
authors = ["Axel '0vercl0k' Souchet"]
license = "MIT"
repository = "https://github.com/0vercl0k/addr-symbolizer-rs"
keywords = ["windows", "kernel", "crash-dump", "symbols", "pdb"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
pdb2 = "0.10"
log = "0.4"
msvc-demangler = "0.11"
ureq = { version = "3.1", default-features = false, features = ["rustls", "gzip"] }
thiserror = "2.0"

[dev-dependencies]
kdmp-parser = "0.8"
udmp-parser = "0.2"
object = { version = "0.38", default-features = false, features = [
    "read",
    "read_core",
    "pe",
    "std",
] }
clap = { version = "4.5", features = ["derive"] }
env_logger = { version = "0.11" }
anyhow = "1.0"

[lints.clippy]
pedantic = "warn"
